# Federated-Learning-Sim

./: README.md
cml-simulation/: cml_task.py  training_log.txt
fl-simulation/: .gitignore  README.md  Run_me.ipynb  pyproject.toml
fl-simulation/fl_simulation/: __init__.py  client_app.py  client_data.py  custom_strategy.py  server_app.py  task.py
fl-simulation/fl_simulation/iterations/: Iteration_0.csv  Iteration_1.csv  Iteration_2.csv
