[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-simulation"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "numpy==1.26.4",
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "saarthak"

[tool.flwr.app.components]
serverapp = "fl_simulation.server_app:app"
clientapp = "fl_simulation.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1
num-supernodes = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num_cpus=1

# num-supernodes and options.num-supernodes should be same.